# My-NixOS

config/: .p10k.zsh
config/alacritty/: alacritty.toml  dank-theme.toml
config/niri/: config.kdl
learning/python/: flake.nix
nixos/: base.nix  flake.nix  hardware-configuration.nix
nixos/modules/: ai.nix  base.nix  development.nix  gaming.nix  services.nix
nixos/modules/desk-enviroment/: caelestia.nix  deskbase.nix  niri.nix  noctalia.nix
nixos/share/: niri.nix  users-base.nix
nixos/users/arcane/: ai.nix  arcane-base.nix  development.nix
nixos/users/arcaneorion/: development.nix
nixos/users/jerry/: jerry-base.nix
nixos/users/sandbox/: sandbox-base.nix
project-flake/AI-agent/: .envrc  flake.nix  pyproject.toml
project-flake/AI-code/: flake.nix  pyproject.toml
project-flake/AI-code/pnpm-packages/: package.json  pnpm-lock.yaml
project-flake/Quantitative-Trading/: flake.nix  pyproject.toml
project-flake/learning/haskell/: flake.nix
project-flake/learning/python/: flake.nix
project-flake/learning/rust/: flake.nix
