[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.9.3",
    "deepagents-cli>=0.0.10",
    "jupyter>=1.1.1",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.4",
    "modelscope>=1.32.0",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
